--- a/views/index.html
+++ b/views/index.html
@@ -154,8 +154,8 @@
 <div class="nationality_guoqi_warp">
   <div class="nationality_guoqi">
     <div class="liuxue-guoqi">
-      <a  href="#lxContaniner"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
+      <a  href="#country_1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
+      <a   href="#country_2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
       <a   href="#"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
@@ -464,7 +464,7 @@
           }else {
               num++;
               $("#lunbo1").animate({top:-270*num+(-270)+'px'})
-              console.log(-270*num+'px')
+              //console.log(-270*num+'px')
           }
       }
       setInterval(lonbo,1000)
