--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -140,6 +140,12 @@
                         "companyId": "46"
                         },
                         {
+                        "companyAddress": "汉口分公司：武汉市航空路新世界中心C座20层",
+                        "companyTel": "服务专线：027-83805656",
+                        "companyName": "H-汉口",
+                        "companyId": "51"
+                        },
+                        {
                         "companyAddress": "济南分公司：济南市市中区泺源大街229号金龙大厦29层",
                         "companyTel": "服务专线：0531-81851155",
                         "companyName": "J-济南",
@@ -248,10 +254,10 @@
                         "companyId": "18"
                         },
                         {
-                        "companyAddress": "武汉分公司：武汉市解放大道航空路新世界中心C座20层",
-                        "companyTel": "服务专线：027-83805656",
-                        "companyName": "W-武汉",
-                        "companyId": "14"
+                        "companyAddress": "武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层",
+                        "companyTel": "服务专线：027-67811600",
+                        "companyName": "W-武昌",
+                        "companyId": "50"
                         },
                         {
                         "companyAddress": "无锡分公司：无锡市崇安区中山路531号红豆国际广场办公楼19层",
