--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -27,6 +27,7 @@
     </li>
     {% endfor %}
   </ul>
+  <div style="float: left;width: 200px;line-height: 45px;position: absolute;left: 446px;margin-top: 2px;">{{item.add_time}}</div>
 </div>
 {% endmacro %}
 {% macro article_edit(item,helper) %}
