--- a/views/center_message.html
+++ b/views/center_message.html
@@ -25,8 +25,8 @@
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
-{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-{{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
+{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
+{{ new_nav_first.new_nav_first(helper) }}
 {% if login_info.usertype == 1 %} {#用户#}
 <div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_USER_CENTER_REVMESSAGE_SEAT1"></div>
 {% elif login_info.usertype == 2 %} {#顾问#}
@@ -81,7 +81,7 @@
         </div>
     </div>
 </div>
-{% include "widget/footer/footer.html" %}
+{% include "widget/new_footer/new_footer.html" %}
 <script>
     if($.cookie('login_ss') != undefined){
         login_ss = JSON.parse($.cookie('login_ss'));  
