--- a/views/center_case.html
+++ b/views/center_case.html
@@ -46,8 +46,8 @@
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
-  {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-  {{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
+  {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
+  {{ new_nav_first.new_nav_first(helper) }}
   <div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_ADVISOR_CENTER_CASE_SEAT1"></div>
   <div class="dui-layout-lg clearfix" style="margin-top: 20px;">
     <div class="dui-layout-silde right">
@@ -82,8 +82,10 @@
             <div class="right-main clearfix case-list-box">
                 {% for item in case_data.list %}
                 <div class="case-list-item">
-                {% import "widget2/offer/offer.html" as case_edit %}
-                {{ case_edit.case_edit(item, helper) }}
+                {#{% import "widget2/offer/offer.html" as case_edit %}
+                {{ case_edit.case_edit(item, helper) }}#}
+                {% import "widget2/article/article.html" as article_show %}
+                {{ article_show.article_show(item, helper) }}
                 {% include "widget2/bottom_comment/bottom_comment.html" %}
                 </div>
                 {% endfor %}
@@ -98,7 +100,7 @@
         </div>
     </div>
   </div>
-  {% include "widget/footer/footer.html" %}
+  {% include "widget/new_footer/new_footer.html" %}
   <script>
     var login_ss = null; 
     if($.cookie('login_ss') != undefined){
