--- a/views/draft.html
+++ b/views/draft.html
@@ -12,8 +12,8 @@
 	<!-- ===头部=== -->
 	{% include "widget/top/top.html" %}
 	<!-- ====导航===== -->
-	{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-	{{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
+	{% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
+  {{ new_nav_first.new_nav_first(helper) }}
 	<div class="dui-layout-lg clearfix" style="margin-top: 20px;margin-bottom:20px;">
 		<!-- ==广告1== -->
 		<div class="rel-case-map" id="AD_{% if login_info.usertype == 2 %}ADVISOR{% elif login_info.usertype == 3 %}CANZAN{% endif %}_CENTER_DRAFT_SEAT1">
@@ -97,7 +97,7 @@
         </div>
     </div>
 	</div>
-  {% include "widget/footer/footer.html" %}
+  {% include "widget/new_footer/new_footer.html" %}
   <script>
   var login_ss = null; //获取用户信息
   if($.cookie('login_ss') != undefined){
