--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -55,7 +55,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_COUNSELLER_SEAT10") }}
+{{slide.leyu_slide("AD_COUNSELLER_SEAT10",userinfo) }}
 </body>
 <script>
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
