--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -257,6 +257,7 @@
             var resData = JSON.parse(response);
             console.log('onSuccess~~~thl', resData);
             if (resData.errno == 0) {
+                console.log('上传成功！')
                 $('#weixin-box').find('.no-code').hide();
                 $('#weixin-box').find('.has-code').show().css("background-image","url(" + resData.data[0] + ")");
                 //$('#weixin-box').find('.has-code').find('img').attr('src',resData.data[0]);
