--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -282,19 +282,19 @@
         '<ul>'+
       '<li onclick="showbottom(1, '+item.id+')" id="yuedu_li_'+item.id+'">'+
             '<i class="iconfont " id="yuedu_'+item.id+'">&#xe9ca;</i>'+
-            '<span id="yuedu_span_'+item.id+'">阅读（<em id="yuedu_em_'+ item.id +'">'+ item.views +'</em>）</span>'+
+            '<span id="yuedu_span_'+item.id+'">阅读<em id="yuedu_em_'+ item.id +'">'+ item.views +'</em></span>'+
           '</li>'+
           '<li onclick="showbottom(2, '+item.id+')" id="shoucang_li_'+item.id+'">'+
             '<i class="iconfont " id="shoucang_'+item.id+'">&#xe7ed;</i>'+
-            '<span id="shoucang_span_'+item.id+'">收藏（<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em>）</span>'+
+            '<span id="shoucang_span_'+item.id+'">收藏<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em></span>'+
           '</li>'+
           '<li onclick="showbottom(3, '+item.id+')" id="pinglun_li_'+item.id+'">'+
             '<i class="iconfont " id="pinglun_'+item.id+'">&#xe61f;</i>'+
-            '<span id="pinglun_span_'+item.id+'">评论（<em id="pinglun_em_'+ item.id +'">'+ item.comments +'</em>）</span>'+
+            '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+ item.id +'">'+ item.comments +'</em></span>'+
           '</li>'+
           '<li class="dian" onclick="showbottom(4, '+item.id+')" id="dianzan_li_'+item.id+'">'+
             '<i class="iconfont " id="dianzan_'+item.id+'">&#xe651;</i>'+
-            '<span id="dianzan_span_'+item.id+'">点赞（<em id="dianzan_em_'+ item.id +'">'+ item.votes +'</em>）</span>'+
+            '<span id="dianzan_span_'+item.id+'">点赞<em id="dianzan_em_'+ item.id +'">'+ item.votes +'</em></span>'+
           '</li>'+
         '</ul>'+
       '</div>';
