--- a/views/index.html
+++ b/views/index.html
@@ -148,30 +148,30 @@
 <div class="nationality_guoqi_warp">
   <div class="nationality_guoqi">
     <div class="liuxue-guoqi">
-      <a  href="#country_1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
+      <a href="#country_1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
       <a   href="#country_2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Japan.png" alt="日本留学"><p>日本</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Ukraine.png" alt="乌克兰留学"><p>乌克兰</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/Russia.png" alt="俄罗斯留学"><p>俄罗斯</p></a>
-      <a   href="#"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰留学"><p>爱尔兰</p></a>
-      <a style="margin-right: 0"  href="#"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/blr.png" alt="白俄罗斯留学"><p>白俄罗斯</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加披留学"><p>新加披</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/malaysia.png" alt="马来西亚留学"><p>马来西亚</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/danmark.png" alt="丹麦留学"><p>丹麦</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/germany.png" alt="德国留学"><p>德国</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/France.png" alt="法国留学"><p>法国</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Norway.png" alt="挪威留学"><p>挪威</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Sweden.png" alt="瑞典留学"><p>瑞典</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Finland.png" alt="芬兰留学"><p>芬兰</p></a>
-      <a  href="#"><img src="{{helper.cdnhost}}/assets/img/Holland.png" alt="荷兰留学"><p>荷兰</p></a>
-      <a  style="margin-right: 0" href="#"><img src="{{helper.cdnhost}}/assets/img/Swiss.png" alt="瑞士留学"><p>瑞士</p></a>
+      <a   href="#country_4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
+      <a   href="#country_3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
+      <a   href="#country_5"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
+      <a   href="#country_51"><img src="{{helper.cdnhost}}/assets/img/Japan.png" alt="日本留学"><p>日本</p></a>
+      <a   href="#country_50"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
+      <a  href="#country_54"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
+      <a   href="#country_101"><img src="{{helper.cdnhost}}/assets/img/Ukraine.png" alt="乌克兰留学"><p>乌克兰</p></a>
+      <a   href="#country_100"><img src="{{helper.cdnhost}}/assets/img/Russia.png" alt="俄罗斯留学"><p>俄罗斯</p></a>
+      <a   href="#country_108"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰留学"><p>爱尔兰</p></a>
+      <a style="margin-right: 0"  href="#country_111"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
+      <a  href="#country_112"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
+      <a  href="#country_102"><img src="{{helper.cdnhost}}/assets/img/blr.png" alt="白俄罗斯留学"><p>白俄罗斯</p></a>
+      <a  href="#country_52"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加披留学"><p>新加披</p></a>
+      <a  href="#country_53"><img src="{{helper.cdnhost}}/assets/img/malaysia.png" alt="马来西亚留学"><p>马来西亚</p></a>
+      <a  href="#country_110"><img src="{{helper.cdnhost}}/assets/img/danmark.png" alt="丹麦留学"><p>丹麦</p></a>
+      <a  href="#country_103"><img src="{{helper.cdnhost}}/assets/img/germany.png" alt="德国留学"><p>德国</p></a>
+      <a  href="#country_104"><img src="{{helper.cdnhost}}/assets/img/France.png" alt="法国留学"><p>法国</p></a>
+      <a  href="#country_105"><img src="{{helper.cdnhost}}/assets/img/Norway.png" alt="挪威留学"><p>挪威</p></a>
+      <a  href="#country_106"><img src="{{helper.cdnhost}}/assets/img/Sweden.png" alt="瑞典留学"><p>瑞典</p></a>
+      <a  href="#country_107"><img src="{{helper.cdnhost}}/assets/img/Finland.png" alt="芬兰留学"><p>芬兰</p></a>
+      <a  href="#country_109"><img src="{{helper.cdnhost}}/assets/img/Holland.png" alt="荷兰留学"><p>荷兰</p></a>
+      <a  style="margin-right: 0" href="#country_113"><img src="{{helper.cdnhost}}/assets/img/Swiss.png" alt="瑞士留学"><p>瑞士</p></a>
     </div>
     <div class="liuxue-guojia-title">
       留学国家及地区
@@ -440,7 +440,13 @@
               $('.nationality_guoqi_warp').hide();
           }
       });
-
+      $(".liuxue-guoqi ").on('click','a',function () {
+          var id=$(this).attr('href')
+          var $scrolltop = $(id).offset().top;
+          $('html,body').animate({//$('html,body')兼容问题body属于chrome
+              scrollTop:$scrolltop-230
+          })
+      });
       $('.lunbo_lift .slider').xSlider({
           //轮播图配置
           autoplay: 500,
