--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/edit_article.css" >
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/release_article.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
@@ -47,7 +47,7 @@
   	      <div class="rel-case-list" >
             <div class="rel-case-text1" style="margin-top: 20px;">
               <label class="title active" for="apply-country">
-                <span>*</span> 选择文章对应国家：
+                <span>*</span> 选择对应国家：
               </label>
               {% set countryList = [
                 {"countryId":"1","txt":"美国"},
@@ -55,24 +55,24 @@
                 {"countryId":"3","txt":"加拿大"},
                 {"countryId":"4","txt":"澳大利亚"},
                 {"countryId":"5","txt":"新西兰"},
-                {"countryId":"50","txt":"韩国"},
                 {"countryId":"51","txt":"日本"},
-                {"countryId":"52","txt":"新加坡"},
-                {"countryId":"53","txt":"马来西亚"},
+                {"countryId":"50","txt":"韩国"},
                 {"countryId":"54","txt":"中国香港"},
                 {"countryId":"100","txt":"俄罗斯"},
                 {"countryId":"101","txt":"乌克兰"},
+                {"countryId":"108","txt":"爱尔兰"},
+                {"countryId":"111","txt":"意大利"},
+                {"countryId":"112","txt":"西班牙"},
                 {"countryId":"102","txt":"白俄罗斯"},
+                {"countryId":"52","txt":"新加坡"},
+                {"countryId":"53","txt":"马来西亚"},
+                {"countryId":"110","txt":"丹麦"},
                 {"countryId":"103","txt":"德国"},
                 {"countryId":"104","txt":"法国"},
                 {"countryId":"105","txt":"挪威"},
                 {"countryId":"106","txt":"瑞典"},
                 {"countryId":"107","txt":"芬兰"},
-                {"countryId":"108","txt":"爱尔兰"},
                 {"countryId":"109","txt":"荷兰"},
-                {"countryId":"110","txt":"丹麦"},
-                {"countryId":"111","txt":"意大利"},
-                {"countryId":"112","txt":"西班牙"},
                 {"countryId":"113","txt":"瑞士"}
               ] %}
               <select id="apply-country" >
@@ -122,7 +122,7 @@
         </div>
       </div>
 	</div>
-  {% include "widget/footer/footer.html" %}
+  {% include "widget/new_footer/new_footer.html" %}
   <script>
     var login_ss = null; //获取用户信息
     if($.cookie('login_ss') != undefined){
