分公司图片的添加

--- a/views/index.html
+++ b/views/index.html
@@ -73,6 +73,7 @@
   <!--50家分公司-->
   <div class="branch_company">
     <div class="branch_company_img">
+      <img src="{{helper.cdnhost}}/assets/img/branch-company.png" alt="五十家分公司">
     </div>
     <div class="branch_company_text">
       <div style="margin: 5px 15px">
