--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -31,8 +31,12 @@
 .branch_company_img{
     width: 190px;
     height: 146px;
-    background: #007aff;
+    /*background: #007aff;*/
     float: left;
+}
+.branch_company_img img{
+    width: 100%;
+    height: 100%;
 }
 .branch_company_text{
     width:1010px;
