--- a/views/widget2/bottom_comment/bottom_comment.html
+++ b/views/widget2/bottom_comment/bottom_comment.html
@@ -1,5 +1,6 @@
 <!--阅读/收藏/评论/点赞-->
-
+<div class="bot_comment clearfix">
+  <ul class="clearfix" style="position: relative">
     <li onclick="showbottom(1, {{item.id}}, {{userinfo.usertype}}, {{item.category_id}})" id="yuedu_li_{{item.id}}" style="cursor: inherit;">
       <i class="iconfont " id="yuedu_{{item.id}}">&#xe9ca;</i>
       <span id="yuedu_span_{{item.id}}">阅读<em id="yuedu_em_{{item.id}}">{{item.views}}</em></span>
@@ -17,3 +18,5 @@
       <i class="iconfont " id="dianzan_{{item.id}}">&#xe651;</i>
       <span id="dianzan_span_{{item.id}}">点赞<em id="dianzan_em_{{item.id}}">{{item.votes}}</em></span>
     </li>
+  </ul>
+</div>
