--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -4,6 +4,7 @@
   {% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper2.7.6.css" >
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper2.7.6.js"></script>
+  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
   <style>
     .list-h{
         height:130px;
@@ -50,14 +51,6 @@
       </div>
       {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
-    <div class="huod-lod clearfix dui-box-shadow" style="margin-top: 20px">
-      <div class="expert_unscramble_title expert_unscramble_title_new">
-        <i></i><h3>活动预告</h3> <a target="_blank" href="javascript:void(0);"></a>
-      </div>
-      <div style="background:#fff;" >
-        {% esi helper.include(esikey,'fragment/huodongyugao','pos=cmslist','c='+tdk.cityid,'n='+hcountry) %}
-      </div>
-    </div>
   </div>
   <div class="dui-layout-div"></div>
   <div class="dui-layout-con left" style="border: 1px solid #eee;margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
@@ -79,38 +72,20 @@
       {% if zhuanlanlist.list.length > 0 %}
       <div id="con_zhuanlan" >
         {% for item in zhuanlanlist.list %}
-        {% import "widget2/article/article.html" as article %}
-        {{article.article_show(item, helper)}}
-        <div>
-          {% include "widget2/bottom_comment/bottom_comment_zhuanlan.html" %}
-        </div>
+        {% import "widget2/article/article.html" as article_show %}
+        {{ article_show.article_show(item, helper) }}
+
+        {% include "widget2/bottom_comment/bottom_comment.html" %}
         {% endfor %}
       </div>
-      <div onclick="jiazaigengduo({{to_uid}})" style="cursor:pointer;width: 100%;height: 54px;text-align: center;line-height: 54px;border-bottom: 1px solid #dcdcdc;border-left: 1px solid #dcdcdc;border-right: 1px solid #dcdcdc">
-      <span id="jiazaigengduo" style="font-size: 14px;color: #666">点击加载更多</span><i id="jiazaigengduo1" class="iconfont" style="font-size: 14px;color: #666">&#xe60b;</i>
+      <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
+        <span>加载更多</span>
+        <i class="iconfont">&#xe60b;</i>
       </div>
       {% else %}
       {% include "widget2/blank/blank.html" %}
       {% endif %}
     </div>
-  </div>
-</div>
-<div class="dui-layout-lg clearfix">
-  <div class="dui-box-shadow" style="margin-top: 20px;background:#fff;" >
-    <div class="common-title">
-      <i></i>
-      <h3>热门留学方案</h3>
-      <a target="_blank" href="{{helper.urlgen('productrank')}}" class="iconfont">&#xe602;</a>
-    </div>
-    {% esi helper.include(esikey,'fragment/hot_liuxuefangan_list') %}
-  </div>
-  <div class="dui-box-shadow clearfix" style="margin-top: 20px;background:#fff;margin-bottom: 20px;">
-    <div class="common-title clearfix">
-      <i></i>
-      <h3>明星顾问</h3>
-      <a target="_blank" href="{{helper.urlgen('adviser')}}" class="iconfont">&#xe602;</a>
-    </div>
-      {% esi helper.include(esikey,'fragment/community_guwen','n='+hcountry) %}
   </div>
 </div>
 {% import "widget/slide/slide.html" as  slide %}
@@ -127,125 +102,234 @@
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script>
   $(function(){
     //明星顾问轮播
-    $('.advisor_star_bar .slider').xSlider();
+    function appendArticleItem (aitem) {
+      var aItemHtml = '<div class="homepage">'+
+          '<div class="homepagecon">'+
+          '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;"></div>'+
+          '<h3>'+ aitem.user_info.realname +'<img src="../assets/img/1v.png" alt=""></h3>'+
+          '<ul>'+
+          '<li class="share-btn"><img src="../assets/img/wx.png" alt=""></li>'+
+          '<li class="share-btn"><img src="../assets/img/pyq.png" alt=""></li>'+
+          '<li class="share-btn"><img src="../assets/img/xl.png" alt=""></li>'+
+          '<li class="share-btn"><img src="../assets/img/qq.png" alt=""></li>'+
+          '<li class="report-btn" style="color: #666;font-size: 12px">举报</li>'+
+          '</ul>'+
+          '</div>'+
+          '<div class="homepage-title">'+
+          '<p>'+aitem.title+'<div>'+aitem.tag_list+'</div></p>'+
+          '</div>'+
+          '<div class="homepage-p">'+
+          '<p>' +
+          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"article="+aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'<span style="color: #C13232">【查看详情】</span>'+
+          '</a>'+
+          '</p>'+
+          addArticleImg(aitem.img_list)+
+          '<div style="float: left;width: 200px;line-height: 45px;position: absolute;left: 446px;margin-top: 11px;">'+aitem.add_time+'</div>'+
+          '</div>'+
+          '</div>'+
+          addBottom(aitem);
+      return aItemHtml;
+    }
+    function appendFav (favArr) {
+      var favHtml = '';
+      for (var i = 0; i < favArr.length; i++) {
+        favHtml += appendArticleItem(favArr[i]);
+      }
+      $('.right-main').append(favHtml);
+      $('.report-btn').on("click",report); //点击举报
+      $('.share-btn').on('click',share); //点击分享
+    }
+    function addArticleImg (imgList) {
+      if(imgList==undefined){
+        return '';
+      }
+      var html = '<ul id="adviser-info-ul" class="homepage-li clearfix" >';
+      for (var j=0; j<imgList.length; j++) {
+        html += '<li><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
+      }
+      html += '</ul>';
+      return html;
+    }
+    function addBottom(item){
+      var html ='<div class="bot_comment clearfix">'+
+          '<ul>'+
+          '<li onclick="showbottom(1, '+item.id+')" id="yuedu_li_'+item.id+'">'+
+          '<i class="iconfont " id="yuedu_'+item.id+'">&#xe9ca;</i>'+
+          '<span id="yuedu_span_'+item.id+'">阅读<em id="yuedu_em_'+ item.id +'">'+ item.views +'</em></span>'+
+          '</li>'+
+          '<li onclick="showbottom(2, '+item.id+')" id="shoucang_li_'+item.id+'">'+
+          '<i class="iconfont " id="shoucang_'+item.id+'">&#xe7ed;</i>'+
+          '<span id="shoucang_span_'+item.id+'">收藏<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em></span>'+
+          '</li>'+
+          '<li onclick="showbottom(3, '+item.id+')" id="pinglun_li_'+item.id+'">'+
+          '<i class="iconfont " id="pinglun_'+item.id+'">&#xe61f;</i>'+
+          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+ item.id +'">'+ item.comments +'</em></span>'+
+          '</li>'+
+          '<li class="dian" onclick="showbottom(4, '+item.id+')" id="dianzan_li_'+item.id+'">'+
+          '<i class="iconfont " id="dianzan_'+item.id+'">&#xe651;</i>'+
+          '<span id="dianzan_span_'+item.id+'">点赞<em id="dianzan_em_'+ item.id +'">'+ item.votes +'</em></span>'+
+          '</li>'+
+          '</ul>'+
+          '</div>';
+      return html;
+    }
+    $('.loadMore').on('click', function () {
+      var page = $(this).data('page')*1+1;
+      var per_page = 4;
+      var thisObj = $(this);
+      $.ajax({
+        url: '/soapi/loadmore',
+        type: 'GET',
+        datatype: 'json',
+        data: {
+          order:"views desc",
+          page: page,
+          type:2,
+          per_page: per_page,
+          uid:thisObj.attr("data-uid")
+        },
+        success: function (revmsg) {
+          console.log(revmsg)
+          if (revmsg.code == 0) {
+            var revList = revmsg.data.list;
+            var len = revList.length;
+            if (len == 0) {
+              thisObj.html('已展示全部收藏');
+            }
+            if (len < per_page) {
+              thisObj.html('已展示全部收藏');
+              appendFav(revList);
+              thisObj.data('page', page);
+            }else {
+              appendFav(revList);
+              thisObj.data('page', page);
+            }
+          }
+          else {
+            thisObj.html('加载更多出错了，请刷新');
+          }
+        },
+        error:function(XMLHttpRequest, textStatus, errorThrown){
+          console.log(errorThrown)
+        }
+      })
+    });
     $('.report-btn').on("click",report); //点击举报
     $('.share-btn').on('click',share); //点击分享
-    
-  })
-  function report(){
-        //举报调取函数
-        if(login_ss == undefined){
-            layer.msg('你还没有登录')
-            window.setTimeout(function(){
-              window.location.href =fn.curlgen('login','h='+window.location.href);
-            },1000);
+    function report(){
+      //举报调取函数
+      if(login_ss == undefined){
+        layer.msg('你还没有登录')
+        window.setTimeout(function(){
+          window.location.href =fn.curlgen('login','h='+window.location.href);
+        },1000);
+        return false;
+      }
+      var report_content = null;
+      var that =this;
+      layer.open({
+        type: 1,
+        title:'举报理由',
+        area: ['700px'], //宽高
+        content:'<div class="report-con">'+
+        '<ul class="report-ul clearfix">'+
+        '<li>'+
+        '<span class="circle"></span>'+
+        '<i class="iconfont">&#xe62a;</i>'+
+        '<span class="sp-con">垃圾、广告信息</span>'+
+        '</li>'+
+        '<li>'+
+        '<span class="circle"></span>'+
+        '<i class="iconfont">&#xe62a;</i>'+
+        '<span class="sp-con">色情、低俗内容</span>'+
+        '</li>'+
+        '<li>'+
+        '<span class="circle"></span>'+
+        '<i class="iconfont">&#xe62a;</i>'+
+        '<span class="sp-con">时政敏感话题</span>'+
+        '</li>'+
+        '<li>'+
+        '<span class="circle"></span>'+
+        '<i class="iconfont">&#xe62a;</i>'+
+        '<span class="sp-con">其它原因</span>'+
+        '</li>'+
+        '</ul>'+
+        '<textarea class="report-txt"></textarea>'+
+        '</div>',
+        btn:'确定',
+        closeBtn:'2',
+        yes: function(index, layero){
+          if(report_content ==undefined || report_content == ''){
+            layer.msg('请选择举报理由');
             return false;
-        }
-        var report_content = null;
-        var that =this;
-        layer.open({
-            type: 1,
-            title:'举报理由',
-            area: ['700px'], //宽高
-            content:'<div class="report-con">'+
-                       '<ul class="report-ul clearfix">'+
-                         '<li>'+
-                           '<span class="circle"></span>'+
-                           '<i class="iconfont">&#xe62a;</i>'+
-                           '<span class="sp-con">垃圾、广告信息</span>'+
-                          '</li>'+
-                          '<li>'+
-                            '<span class="circle"></span>'+
-                            '<i class="iconfont">&#xe62a;</i>'+
-                            '<span class="sp-con">色情、低俗内容</span>'+
-                          '</li>'+
-                          '<li>'+
-                            '<span class="circle"></span>'+
-                            '<i class="iconfont">&#xe62a;</i>'+
-                            '<span class="sp-con">时政敏感话题</span>'+
-                          '</li>'+
-                          '<li>'+
-                            '<span class="circle"></span>'+
-                            '<i class="iconfont">&#xe62a;</i>'+
-                            '<span class="sp-con">其它原因</span>'+
-                          '</li>'+
-                        '</ul>'+
-                        '<textarea class="report-txt"></textarea>'+
-                    '</div>',
-            btn:'确定',
-            closeBtn:'2',
-            yes: function(index, layero){
-              if(report_content ==undefined || report_content == ''){
-                layer.msg('请选择举报理由');
-                return false;
+          }
+          $.ajax({
+            // url: ajaxUrlPrefix.cmsapi+'/api/userReport',
+            url:'/soapi/userReport',
+            type:'POST',
+            data:{
+              report_source:'1',
+              report_type:'1',
+              report_content:report_content,
+              userid:login_ss.uid,
+              artecle_id:$(that).attr("data-artId"),
+              catid:$(that).attr("data-catid")
+            },
+            dataType:'json',
+            // jsonpCallback:'callback',
+            success:function(result){
+              console.log(result)
+              if(result.code == 0){
+                layer.msg('举报成功');
+                layer.close(index);
               }
-              $.ajax({
-                // url: ajaxUrlPrefix.cmsapi+'/api/userReport',
-                url:'/soapi/userReport',
-                type:'POST',
-                data:{
-                  report_source:'1',
-                  report_type:'1',
-                  report_content:report_content,
-                  userid:login_ss.uid,
-                  artecle_id:$(that).attr("data-artId"),
-                  catid:$(that).attr("data-catid")
-                },
-                dataType:'json',
-                // jsonpCallback:'callback',
-                success:function(result){
-                  console.log(result)
-                  if(result.code == 0){
-                    layer.msg('举报成功');
-                    layer.close(index); 
-                  }
-                },
-                error:function(XMLHttpRequest, textStatus, errorThrown){
-                  console.log(errorThrown)
-                }  
-              });
-            }         
-        });
-        $(".report-ul li").on("click",function(){
-            //选择举报内容
-            $(".report-ul li i").hide();
-            $(".report-ul li .circle").show();
-            $(this).find("i").show();
-            $(this).find(".circle").hide();
-            if($(this).index() == 3){
-              $(".report-txt").show();
-              $(".layui-layer-content").css({"height":"115px"});
-            }else{
-              $(".report-txt").hide();
-              $(".layui-layer-content").css({"height":"39px"});
-              report_content = $(this).find('.sp-con').text();
+            },
+            error:function(XMLHttpRequest, textStatus, errorThrown){
+              console.log(errorThrown)
             }
-        });
-        $('.report-txt').on('change',function(){
-            if($('.report-txt').val()!= ''){
-              report_content = $('.report-txt').val();
-            }else{
-               report_content ='';
-            }
-        });
-  }
-  function share(){
-    //调取分享函数
-    var that =this;
-    layer.open({
-      type: 2,
-      title: '分享到',
-      area: ['262px', '327px'],
-      content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+$(that).attr('data-url'), 'no']
-    });
-  }
+          });
+        }
+      });
+      $(".report-ul li").on("click",function(){
+        //选择举报内容
+        $(".report-ul li i").hide();
+        $(".report-ul li .circle").show();
+        $(this).find("i").show();
+        $(this).find(".circle").hide();
+        if($(this).index() == 3){
+          $(".report-txt").show();
+          $(".layui-layer-content").css({"height":"115px"});
+        }else{
+          $(".report-txt").hide();
+          $(".layui-layer-content").css({"height":"39px"});
+          report_content = $(this).find('.sp-con').text();
+        }
+      });
+      $('.report-txt').on('change',function(){
+        if($('.report-txt').val()!= ''){
+          report_content = $('.report-txt').val();
+        }else{
+          report_content ='';
+        }
+      });
+    }
+    function share(){
+      //调取分享函数
+      var that =this;
+      layer.open({
+        type: 2,
+        title: '分享到',
+        area: ['262px', '327px'],
+        content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+$(that).attr('data-url'), 'no']
+      });
+    }
+  })
 </script>
 </body>
 </html>
