--- a/views/index.html
+++ b/views/index.html
@@ -59,14 +59,14 @@
         <!--</div>-->
       <!--</div>-->
       <ul id="lunbo1">
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-9.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-6.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-8.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-10.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-9.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-6.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-8.jpg" alt=""></li>
-        <li><img src="http://www.jjl.cn/statics//njjlmt/img/slider-10.jpg" alt=""></li>
+        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}"></a></li>
+        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}"></a></li>
+        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}"></a></li>
+        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}"></a></li>
+        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}"></a></li>
+        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}"></a></li>
+        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}"></a></li>
+        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}"></a></li>
       </ul>
     </div>
   </div>
