金吉列简介页面的图片更新 大事记页面更新

--- a/views/widget/academy/academy3_2.html
+++ b/views/widget/academy/academy3_2.html
@@ -1,26 +1,26 @@
 <div class="dui-layout-padding clearfix">
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor1.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">保护消费者基金会</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;" src="{{helper.cdnhost}}/assets/img/honor1.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">《留学服务术语》与《留学中介服务规范》</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor2.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">服务术语</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor2.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">500家最大私营企业</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor3.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">工商行政管理局</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor3.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a class="dui-text-warning-s" href="javascript:void(0);">北京留学服务行业协会常务理事单位</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor4.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">工商业联合会</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1"  style="height: 276px;width: 366px;" src="{{helper.cdnhost}}/assets/img/honor4.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费者满意单位</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor5.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">维护消费者权益基金会</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor5.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">消费教育学校</a></p>
   </div>
   <div class="dui-layout-col3">
-    <div><a href=""><img class="col3-t-p1-p2-a1" src="{{helper.cdnhost}}/assets/img/honor6.jpg" alt=""></a></div>
-    <p class="col3-t-p1-p2-a2"><a class="dui-text-warning-s" href="">新浪移民</a></p>
+    <div><a  href="javascript:void(0);"><img class="col3-t-p1-p2-a1" style="height: 276px;width: 366px;"  src="{{helper.cdnhost}}/assets/img/honor6.jpg" alt=""></a></div>
+    <p class="col3-t-p1-p2-a2" style="text-align: center;"><a  class="dui-text-warning-s" href="javascript:void(0);">重合同守信誉单位</a></p>
   </div>
 </div>
