--- a/views/widget/corporate_events/corporate_events.html
+++ b/views/widget/corporate_events/corporate_events.html
@@ -1,6 +1,6 @@
 {% for yearnum, yearamount in memorabilia_list.list %}
 <div class="dui-layout-lg curyear" style="background:#ffffff">
-  <div class="year-box"><h6 class="year-num">{{ yearnum | shorten(-1)}}</h6> <i class="city-icon iconfont down xiangxia">&#xe623;</i> <i class="city-icon iconfont dian">&#xe609;</i></div>
+  <div class="year-box clearfix"><h6 class="year-num">{{ yearnum | shorten(-1)}}</h6> <i class="city-icon iconfont down xiangxia">&#xe623;</i> <i class="city-icon iconfont dian">&#xe609;</i></div>
   <div class="kong"></div>
   {% for monthnum, monthamount in yearamount %}
 
