--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -64,7 +64,7 @@
   height: 24px;
   float: left;
   margin-left: 20px;
-  background: url("../assets/img/yanse.png");
+  background: url("../img/yanse.png");
   background-size:cover ;
   border-radius:12px ;
   margin-top: -3px;
